# django-chat

./: .env.example  .gitignore  .sops.yaml  2026-04-18_django-chat_research.md  AGENTS.md  CLAUDE.md  README.md  justfile  manage.py  prek.toml  pyproject.toml  zensical.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
deploy/: ansible.cfg  bootstrap.yml  deploy.yml  requirements.yml
deploy/group_vars/: django_chat.yml  production.yml  staging.yml
deploy/inventory/: hosts.yml
deploy/secrets/: production.example.yml  staging.example.yml
deploy/tasks/: bootstrap-host.yml
django_chat/core/: apps.py  context_processors.py  feeds.py  middleware.py  receivers.py  sponsor_shoutout.py  staticfiles.py  views.py
django_chat/core/management/: __init__.py
django_chat/core/templatetags/: dc_filters.py  dc_sponsor.py
django_chat/core/tests/: test_browser_js.py  test_comments.py  test_dc_filters.py  test_deployment_scaffold.py  test_ensure_default_site.py  test_episode_index_filter.py  test_episode_pagination.py  test_middleware.py  test_project.py  test_sponsor_shoutout.py  test_template_meta.py  test_wagtail_admin.py
django_chat/imports/: __init__.py  apps.py  feed_smoke.py  import_catalog.py  import_sample.py  live_feed_parity.py  models.py  performance.py  show_note_backfill.py  show_notes.py  source_data.py  staging_transcripts.py  url_safety.py
django_chat/imports/migrations/: 0001_initial.py  0002_episodeaudioimportmetadata.py  0003_podcastsourcelink.py  0004_normalize_episode_body_show_note_headings.py  0005_repair_episode_show_notes.py  0006_repair_remaining_implicit_show_note_lists.py  0007_hide_implicit_link_list_headings.py  0008_convert_legacy_markdown_show_notes.py  0009_restore_support_show_copy.py  0010_restore_source_detail_show_notes.py  0011_restore_support_boilerplate_copy.py  0012_strip_markdown_hashes_from_show_note_headings.py  0013_sanitize_imported_show_note_html.py  0014_drop_unsafe_imported_source_links.py  0015_materialize_show_note_icons.py  0016_heal_show_note_icons.py  0017_offload_raw_show_note_headings.py  0018_unhide_implicit_link_list_headings.py  0019_add_implicit_link_list_headings.py  0020_enable_comments_on_imported_episodes.py
django_chat/imports/tests/: __init__.py  test_feed_smoke.py  test_icon_migration.py  test_import_catalog.py  test_import_sample.py  test_live_feed_parity.py  test_performance.py  test_sample_site_routes.py  test_security_hardening.py  test_seed_diarized_demo.py  test_show_note_backfill.py  test_show_notes.py  test_source_data.py  test_staging_transcripts.py
django_chat/show_notes/: __init__.py  apps.py  blocks.py  icons.py  widgets.py
django_chat/show_notes/templatetags/: show_note_icons.py
django_chat/show_notes/tests/: test_blocks.py  test_icons.py  test_widgets.py
django_chat/sponsor/: apps.py  models.py  views.py
django_chat/sponsor/migrations/: 0001_initial.py  0002_sponsor_page_content.py
django_chat/sponsor/tests/: test_sponsor_page.py
django_chat/templates/comments/: base.html  comment.html  form.html
docs/: contributors-and-diarization.md  css-architecture.md  custom-player-transcript-share-spec.md  deployment.md  episode-numbering-research.md  feed-cutover-analysis.md  host-review-guide.md  implementation-status.md  import-security.md  index.md  lighthouse-performance.md  local-development.md  operations-boundary.md  production-migration-notes.md  security-known-issues.md  show-note-backfill-repair.md  staging-differences.md  structured-show-note-blocks-research.md
docs/superpowers/handoffs/: 2026-05-17-player-restyling-research.md
docs/superpowers/plans/: 2026-04-26-visual-polish.md  2026-05-16-player-design-cleanup.md  2026-06-20-comments-activation.md
docs/superpowers/specs/: 2026-04-26-visual-polish-design.md  2026-05-11-view-transitions-options.md  (+2 more)
frontend/sandbox/: HANDOFF.md  new-header.html  tweak-snapshot.css  tweak-snapshot.json
(+68 files in other folders)
