[project]
name = "django-chat"
version = "0.1.0"
description = "Self-hosted Django Chat site built with Django, Wagtail, and django-cast."
readme = "README.md"
requires-python = ">=3.14.4,<3.15"
dependencies = [
    "beautifulsoup4>=4.14,<5.0",
    "Django>=6.0,<7.0",
    "django-cast",
    "django-environ>=0.13,<0.14",
    "django-storages[s3]>=1.14,<2.0",
    "django-tasks>=0.12,<0.13",
    "django-tasks-db>=0.12,<0.13",
    "gunicorn>=23.0,<24.0",
    "psycopg[binary]>=3.3,<4.0",
    "wagtail>=7.4,<8.0",
    "whitenoise>=6.11,<7.0",
]

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "prek>=0.3,<0.4",
    "pytest>=9.0,<10.0",
    "pytest-django>=4.11,<5.0",
    "ruff>=0.15,<0.16",
    "ty>=0.0.31,<0.1",
    "zensical>=0.0.41,<0.1",
]

[tool.uv]
package = false

[tool.uv.sources]
# django-cast Contributor snippets/episode assignments, the diarized transcript
# speaker-label workflow, CAST_POST_BODY_BLOCKS, and the custom audio player ship
# from the develop branch, which `../python-podcast` also tracks. Pin the exact
# commit for reproducible builds; bump deliberately when develop advances.
django-cast = { git = "https://github.com/ephes/django-cast", rev = "151a4fa8d306def60783d50d7f4f3e052a057533" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["django_chat"]
addopts = ["-ra"]
markers = [
    "browser: browser-driven tests that run only when DJANGO_CHAT_BROWSER_TESTS=1 is set",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["config", "django_chat"]
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["B", "DJ", "E", "F", "I", "SIM", "UP"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["config", "django_chat", "manage.py"]

[tool.slopscope]
exclude_dirs = ["docs/_build"]
source_dirs = ["config", "django_chat"]
test_dirs = ["django_chat/core/tests", "django_chat/imports/tests"]
areas = ["config", "django_chat", "docs", "deploy", "tooling"]
